--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,11 +11,8 @@ body {
     min-height: 100vh;
     background-image: linear-gradient(to right bottom, #0d1b61, #221962, #311562, #3e1061, #4a0960);
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 40px;
-    margin-inline: 20px;
 }
 
 h1 {
@@ -39,10 +36,10 @@ h2 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 30px;
+    margin-top: 40px;
     background-color: whitesmoke;
     max-width: 700px;
-    padding: 40px;
+    padding: 50px;
     border-radius: 14px;
     max-height: 80vh;
     box-shadow: 2px 2px 12px rgba(229, 227, 227, 0.781);
@@ -171,11 +168,10 @@ thead th {
     align-items: center;
     justify-content: center;
     gap: 20px;
+    margin-top: 40px;
 }
 
 .logo-js {
     width: 120px;
-    /* position: relative; */
     border-radius: 8px;
-    bottom: 55px;
 }
